<resources>
    <string name="app_name">SpendingList</string>
    <string name="action_settings">Settings</string>
    <string name="message_text">Message Text</string>
    <string name="spentFor">Spent for</string>
    <string name="spentTo">Spent to</string>
    <string name="select_date">Select Date</string>
    <string name="current_date">Current Date</string>
    <string name="or">( OR )</string>
    <string name="date">Date</string>
    <string name="spentMoney">Spent money (₹)</string>
    <string name="checked">Checked</string>
    <string name="add">Add</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="spentBy">Spent By</string>
    <string name="no_spendings">No Spendings</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="alert_delete_msg">Are you sure to delete the spending?</string>
    <string name="alert">Alert</string>
</resources>
